# kiro-account-manager

./: .gitignore  RELEASE_GUIDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/workflows/: build.yml  release.yml
src/: App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: account.rs  auth.rs  auth_social.rs  aws_sso_client.rs  browser.rs  codewhisperer_client.rs  deep_link_handler.rs  kiro.rs  kiro_auth_client.rs  main.rs  mcp.rs  powers.rs  process.rs  state.rs  steering.rs
src-tauri/src/commands/: account_cmd.rs  app_settings_cmd.rs  auth_cmd.rs  kiro_settings_cmd.rs  machine_guid_cmd.rs  mcp_cmd.rs  mod.rs  powers_cmd.rs  proxy_cmd.rs  sso_import_cmd.rs  steering_cmd.rs  update_cmd.rs  web_oauth_cmd.rs
src-tauri/src/providers/: base.rs  factory.rs  idc.rs  mod.rs  social.rs  web_oauth.rs
src/components/: About.jsx  AccountDetailModal.jsx  Settings.jsx  Sidebar.jsx  UpdateChecker.jsx
src/components/AccountManager/: AccountCard.jsx  AccountHeader.jsx  AccountRow.jsx  AccountTable.jsx  AddAccountModal.jsx  ConfirmDialog.jsx  EditAccountModal.jsx  ImportAccountModal.jsx  RefreshProgressModal.jsx  index.jsx
src/components/KiroConfig/: MCPPanel.jsx  PowersPanel.jsx  SteeringPanel.jsx  index.jsx
src/components/MCPManager/: AddMCPModal.jsx  EditMCPModal.jsx  MCPServerCard.jsx  MCPTemplates.js  index.jsx
src/constants/: config.js
src/contexts/: DialogContext.jsx  ThemeContext.jsx
src/utils/: accountStats.js
(+3 files in other folders)
